# Spore

./: .goosehints  Cargo.toml  PROJECT.org  README.md
crates/spore/: Cargo.toml
crates/spore-repl/: Cargo.toml
crates/spore-repl/examples/: spore-repl.rs
crates/spore-repl/src/: lib.rs
crates/spore-vm/: Cargo.toml
crates/spore-vm/examples/: fib.rs
crates/spore-vm/src/: builtins.rs  compiler.rs  error.rs  instruction.rs  lib.rs  module.rs  object_store.rs  val.rs  vm.rs
crates/spore-vm/src/builtins/: boxes.rs  lists.rs  math.rs  mod.rs  strings.rs  structs.rs
crates/spore-vm/src/compiler/: ast.rs  compiler_context.rs  error.rs  ir.rs  mod.rs  parsed_text.rs  sexp.rs  span.rs  tokenizer.rs
crates/spore-vm/src/gc/: id.rs  mod.rs  typed_object_store.rs
crates/spore-vm/src/val/: bytecode_function.rs  custom.rs  functions.rs  identifier.rs  mod.rs  native_function.rs  symbol.rs
crates/spore/lisp/: buffer.lisp  main.lisp  window.lisp
crates/spore/src/: buffer.rs  events.rs  files.rs  main.lisp  main.rs  rope.rs  shell.rs  widgets.rs
src/: ast.rs  builtins.rs  compiler.rs  instruction.rs  lib.rs  module.rs  object_store.rs  tokenizer.rs  val.rs  vm.rs
src/compiler/: ast.rs  ir.rs  mod.rs  span.rs  tokenizer.rs
src/val/: functions.rs  mod.rs  symbol.rs
